# FSE_12_team_final_project

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  prereqs.sh  test.sh
.github/workflows/: essential_test.yml
sortApp/: CMakeLists.txt  main.cpp  team12sort
tests/: test.sh
